[gd_scene load_steps=29 format=3 uid="uid://bwaojw2igp0kd"]

[ext_resource type="Theme" uid="uid://cxldawy7hnlku" path="res://default_theme.tres" id="1_y5ctq"]
[ext_resource type="Script" uid="uid://c4xyw8i5jmhfa" path="res://main/Game.gd" id="2_w7ht3"]
[ext_resource type="Script" uid="uid://bvsxe7140kkgc" path="res://core/currencies/PlayerCurrencies.gd" id="3_8ktx7"]
[ext_resource type="Script" uid="uid://kexivlvyyg87" path="res://core/TimeTracker.gd" id="4_hwsgv"]
[ext_resource type="Script" uid="uid://dsujm37ljcj4u" path="res://items/PlayerInventory.gd" id="5_gebyw"]
[ext_resource type="Script" uid="uid://cr3ryrsq5m4v0" path="res://items/LazyLoadItem.gd" id="6_4my3f"]
[ext_resource type="Script" uid="uid://ba36v1b1jri08" path="res://characters/AdventuringParties.gd" id="7_aeq37"]
[ext_resource type="Script" uid="uid://bxu4cx67teei7" path="res://characters/AdventuringParty.gd" id="8_suycs"]
[ext_resource type="Script" uid="uid://bftwko1mxftug" path="res://characters/Character.gd" id="9_202ut"]
[ext_resource type="Script" uid="uid://37lfxcb774f2" path="res://quest/QuestManager.gd" id="10_5he1h"]
[ext_resource type="Script" uid="uid://bbpg5w2de17ex" path="res://quest/QuestsContainerNode.gd" id="11_xwkxq"]
[ext_resource type="Script" uid="uid://dha28liq3sunc" path="res://characters/CharacterGraveyard.gd" id="12_wdm1y"]
[ext_resource type="Script" uid="uid://bpcsenk3ubug2" path="res://items/ItemContainer.gd" id="13_hxy8k"]
[ext_resource type="Script" uid="uid://g3sofqeyh8i2" path="res://items/ui/PlayerCurrencyDisplay.gd" id="14_2t1a5"]
[ext_resource type="Texture2D" uid="uid://bg87pigjk72d3" path="res://assets/icons/resources/coins.png" id="15_8576b"]
[ext_resource type="Script" uid="uid://bbr40iytx555f" path="res://test/FPSLabel.gd" id="16_68r7h"]
[ext_resource type="Script" uid="uid://dfnqbkmy7vepb" path="res://core/TimeLabel.gd" id="17_7vltt"]
[ext_resource type="Script" uid="uid://ci4sf0jejbix8" path="res://core/AdvanceTimeButton.gd" id="18_fj2yu"]
[ext_resource type="Texture2D" uid="uid://dsg5q8nhyethd" path="res://assets/icons/hamburger.png" id="19_w7ht3"]
[ext_resource type="Script" uid="uid://cm0tvckr3ukic" path="res://core/SignalBusButton.gd" id="20_8ktx7"]
[ext_resource type="PackedScene" uid="uid://b3ruqllcfspo1" path="res://items/ui/PlayerInventoryView.tscn" id="20_n7324"]
[ext_resource type="PackedScene" uid="uid://ct06m6nwbyn5k" path="res://main/Shop.tscn" id="21_o6tbt"]
[ext_resource type="PackedScene" uid="uid://biym5k6isys7d" path="res://characters/ui/TavernUI.tscn" id="22_v5dxo"]
[ext_resource type="Script" uid="uid://d0ttfscisgsof" path="res://characters/Cemetery.gd" id="23_dyvha"]
[ext_resource type="Script" uid="uid://d2ul0mcictsbl" path="res://main/PopupManager.gd" id="25_w250u"]
[ext_resource type="PackedScene" uid="uid://nstp1h046lac" path="res://items/ui/ItemPopup.tscn" id="26_3h3yf"]
[ext_resource type="PackedScene" uid="uid://b6gjspjilh735" path="res://quest/ui/NewSelectUI/PartyQuestTabUI.tscn" id="26_8ktx7"]
[ext_resource type="PackedScene" uid="uid://bkaunu282ok5r" path="res://main/GameOverScreen.tscn" id="29_8ktx7"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_y5ctq")
script = ExtResource("2_w7ht3")

[node name="PlayerCurrencies" type="Node" parent="."]
script = ExtResource("3_8ktx7")

[node name="TimeTracker" type="Node" parent="." groups=["time"]]
script = ExtResource("4_hwsgv")

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource("5_gebyw")

[node name="PHShortsword" type="Node" parent="PlayerInventory"]
script = ExtResource("6_4my3f")
item_name = "Shortsword"

[node name="PHCoif" type="Node" parent="PlayerInventory"]
script = ExtResource("6_4my3f")
item_name = "Coif"

[node name="Item" type="Node" parent="PlayerInventory"]
script = ExtResource("6_4my3f")
item_name = "Sylvan Axe"

[node name="AdventuringParties" type="Node" parent="." groups=["time"]]
unique_name_in_owner = true
script = ExtResource("7_aeq37")

[node name="LoneWolf" type="Node" parent="AdventuringParties"]
script = ExtResource("8_suycs")
display_name = "The Lone Wolf"
preset_quests = Array[String](["Crystal Pool", "Guard Dogs"])
metadata/_custom_type_script = "uid://bxu4cx67teei7"

[node name="Noragar" type="Node" parent="AdventuringParties/LoneWolf"]
script = ExtResource("9_202ut")
character_name = "Noragar"
character_class = 4
metadata/_custom_type_script = "uid://bftwko1mxftug"

[node name="GreenShoots" type="Node" parent="AdventuringParties"]
script = ExtResource("8_suycs")
display_name = "Green Shoots"

[node name="Ben" type="Node" parent="AdventuringParties/GreenShoots"]
script = ExtResource("9_202ut")
character_name = "Benthar"

[node name="Sam" type="Node" parent="AdventuringParties/GreenShoots"]
script = ExtResource("9_202ut")
character_name = "Samwise"
character_class = 3

[node name="Gen" type="Node" parent="AdventuringParties/GreenShoots"]
script = ExtResource("9_202ut")
character_name = "Genevieve"
character_class = 2

[node name="AdventuringParties2" type="Node" parent="." groups=["time"]]
unique_name_in_owner = true
script = ExtResource("7_aeq37")

[node name="YeParte" type="Node" parent="AdventuringParties2"]
script = ExtResource("8_suycs")
display_name = "Ye Parte"

[node name="Arthur" type="Node" parent="AdventuringParties2/YeParte"]
script = ExtResource("9_202ut")
character_name = "Arthur"
experience = 50
character_class = 3

[node name="PHShortsword" type="Node" parent="AdventuringParties2/YeParte/Arthur"]
script = ExtResource("6_4my3f")
item_name = "Shortsword"

[node name="Benthwyn" type="Node" parent="AdventuringParties2/YeParte"]
script = ExtResource("9_202ut")
character_name = "Benthwyn"
experience = 320
character_class = 2

[node name="PHShortbow" type="Node" parent="AdventuringParties2/YeParte/Benthwyn"]
script = ExtResource("6_4my3f")
item_name = "Shortbow"

[node name="Gomli" type="Node" parent="AdventuringParties2/YeParte"]
script = ExtResource("9_202ut")
character_name = "Gomli"
experience = 60

[node name="PHAxe" type="Node" parent="AdventuringParties2/YeParte/Gomli"]
script = ExtResource("6_4my3f")
item_name = "Battleaxe"

[node name="Ugs" type="Node" parent="AdventuringParties2"]
script = ExtResource("8_suycs")
display_name = "Ugs"

[node name="Ug" type="Node" parent="AdventuringParties2/Ugs"]
script = ExtResource("9_202ut")
character_name = "Ug"

[node name="PHShortsword" type="Node" parent="AdventuringParties2/Ugs/Ug"]
script = ExtResource("6_4my3f")
item_name = "Shortsword"

[node name="Og" type="Node" parent="AdventuringParties2/Ugs"]
script = ExtResource("9_202ut")
character_name = "Og"
character_class = 3

[node name="PHShortsword" type="Node" parent="AdventuringParties2/Ugs/Og"]
script = ExtResource("6_4my3f")
item_name = "Shortsword"

[node name="Ag" type="Node" parent="AdventuringParties2/Ugs"]
script = ExtResource("9_202ut")
character_name = "Ag"
character_class = 2

[node name="PHShortbow" type="Node" parent="AdventuringParties2/Ugs/Ag"]
script = ExtResource("6_4my3f")
item_name = "Shortbow"

[node name="TheFellowship" type="Node" parent="AdventuringParties2"]
script = ExtResource("8_suycs")
display_name = "The Fellowship"

[node name="Aragorn" type="Node" parent="AdventuringParties2/TheFellowship"]
script = ExtResource("9_202ut")
character_name = "Aragorn"
experience = 200

[node name="PHShortsword" type="Node" parent="AdventuringParties2/TheFellowship/Aragorn"]
script = ExtResource("6_4my3f")
item_name = "Shortsword"

[node name="Legolas" type="Node" parent="AdventuringParties2/TheFellowship"]
script = ExtResource("9_202ut")
character_name = "Legolas"
experience = 200
character_class = 2

[node name="PHShortbow" type="Node" parent="AdventuringParties2/TheFellowship/Legolas"]
script = ExtResource("6_4my3f")
item_name = "Shortbow"

[node name="Gimli" type="Node" parent="AdventuringParties2/TheFellowship"]
script = ExtResource("9_202ut")
character_name = "Gimli"
experience = 200

[node name="QuestManager" type="Node" parent="." node_paths=PackedStringArray("parties", "available_quests") groups=["time"]]
script = ExtResource("10_5he1h")
parties = NodePath("../AdventuringParties")
available_quests = NodePath("AvailableQuests")

[node name="PendingQuests" type="Node" parent="QuestManager"]
script = ExtResource("11_xwkxq")
quest_signal = "quest_finished"

[node name="AvailableQuests" type="Node" parent="QuestManager"]
script = ExtResource("11_xwkxq")
quest_signal = "quest_created"

[node name="ActiveQuests" type="Node" parent="QuestManager"]
script = ExtResource("11_xwkxq")
quest_signal = "quest_started"

[node name="CompletedQuests" type="Node" parent="QuestManager"]
script = ExtResource("11_xwkxq")
quest_signal = "quest_completed"

[node name="CharacterGraveyard" type="Node" parent="."]
script = ExtResource("12_wdm1y")

[node name="ShopInventory" type="Node" parent="."]
script = ExtResource("13_hxy8k")

[node name="GameWindow" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="GameWindow"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="GameWindow/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GameWindow/TopBar/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Game Progress:"

[node name="Control" type="Control" parent="GameWindow/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="GameWindow/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
script = ExtResource("17_7vltt")
time_tracker_path = NodePath("../../../TimeTracker")

[node name="AdvanceTimeButton" type="Button" parent="GameWindow/TopBar" groups=["button"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Advance Day"
script = ExtResource("18_fj2yu")

[node name="HBoxContainer2" type="HBoxContainer" parent="GameWindow/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Control2" type="Control" parent="GameWindow/TopBar/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldDisplay" type="HBoxContainer" parent="GameWindow/TopBar/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlayerCurrencyDisplay" type="Label" parent="GameWindow/TopBar/HBoxContainer2/GoldDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0 gp"
script = ExtResource("14_2t1a5")

[node name="TextureRect" type="TextureRect" parent="GameWindow/TopBar/HBoxContainer2/GoldDisplay"]
modulate = Color(0.878431, 0.764706, 0.537255, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("15_8576b")

[node name="FPSLabel" type="Label" parent="GameWindow/TopBar/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "FPS:60"
script = ExtResource("16_68r7h")

[node name="MenuButton" type="Button" parent="GameWindow/TopBar/HBoxContainer2" groups=["button"]]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/icon_hover_pressed_color = Color(0.878431, 0.764706, 0.537255, 1)
theme_override_colors/icon_hover_color = Color(0.878431, 0.764706, 0.537255, 1)
theme_override_colors/icon_pressed_color = Color(0.878431, 0.764706, 0.537255, 1)
theme_override_colors/icon_focus_color = Color(0.878431, 0.764706, 0.537255, 1)
theme_override_colors/icon_normal_color = Color(0.878431, 0.764706, 0.537255, 1)
theme_override_font_sizes/font_size = 20
icon = ExtResource("19_w7ht3")
expand_icon = true
script = ExtResource("20_8ktx7")
signal_string = "menu_requested"

[node name="GameTabs" type="TabContainer" parent="GameWindow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tab_alignment = 1
current_tab = 0

[node name="Quests" parent="GameWindow/GameTabs" node_paths=PackedStringArray("adventuring_parties") instance=ExtResource("26_8ktx7")]
layout_mode = 2
adventuring_parties = NodePath("../../../AdventuringParties")
metadata/_tab_index = 0

[node name="Inventory" parent="GameWindow/GameTabs" instance=ExtResource("20_n7324")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Shop" parent="GameWindow/GameTabs" node_paths=PackedStringArray("shop_inventory") instance=ExtResource("21_o6tbt")]
visible = false
layout_mode = 2
shop_inventory = NodePath("../../../ShopInventory")

[node name="Cemetery" type="MarginContainer" parent="GameWindow/GameTabs" node_paths=PackedStringArray("container")]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("23_dyvha")
container = NodePath("VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer")
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GameWindow/GameTabs/Cemetery"]
layout_mode = 2

[node name="Label" type="Label" parent="GameWindow/GameTabs/Cemetery/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Remembering those that were lost"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GameWindow/GameTabs/Cemetery/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="GameWindow/GameTabs/Cemetery/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GameWindow/GameTabs/Cemetery/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HiddenTabs" type="Control" parent="GameWindow"]
visible = false
layout_mode = 2

[node name="[PH]Forge" type="MarginContainer" parent="GameWindow/HiddenTabs"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -520.0
offset_right = -4.0
offset_bottom = -498.0

[node name="Label" type="Label" parent="GameWindow/HiddenTabs/[PH]Forge"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "TODO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tavern" parent="GameWindow/HiddenTabs" node_paths=PackedStringArray("adventuring_parties") instance=ExtResource("22_v5dxo")]
visible = false
layout_mode = 2
anchors_preset = 0
offset_top = 52.0
offset_right = 452.0
offset_bottom = 210.0
adventuring_parties = NodePath("../../../AdventuringParties")

[node name="PopupManager" type="VBoxContainer" parent="." node_paths=PackedStringArray("player_inventory", "player_currencies")]
layout_mode = 2
offset_left = 269.0
offset_right = 319.0
offset_bottom = 208.0
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("25_w250u")
player_inventory = NodePath("../PlayerInventory")
item_popup_scene = ExtResource("26_3h3yf")
player_currencies = NodePath("../PlayerCurrencies")

[node name="Label" type="Label" parent="PopupManager"]
layout_mode = 2
text = "Gained:"
horizontal_alignment = 1

[node name="GoldPopup" type="HBoxContainer" parent="PopupManager"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="GoldPopupAmountLabel" type="Label" parent="PopupManager/GoldPopup"]
unique_name_in_owner = true
layout_mode = 2
text = "+10"

[node name="TextureRect" type="TextureRect" parent="PopupManager/GoldPopup"]
layout_mode = 2
texture = ExtResource("15_8576b")

[node name="GoldPopupTimer" type="Timer" parent="PopupManager/GoldPopup"]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="ItemPopup" parent="PopupManager" instance=ExtResource("26_3h3yf")]
layout_mode = 2

[node name="ItemPopup2" parent="PopupManager" instance=ExtResource("26_3h3yf")]
layout_mode = 2

[node name="ItemPopup3" parent="PopupManager" instance=ExtResource("26_3h3yf")]
layout_mode = 2

[node name="GameOverScreen" parent="." instance=ExtResource("29_8ktx7")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -167.0
offset_right = 220.0
offset_bottom = 167.0
